# BDD-Construction

./: .gitignore  .gitmodules  CMakeLists.txt  ProgressBar.cpp  ProgressBar.h  README.md  create_results.py  file_utils.cpp  file_utils.h  main.cpp  progress_bar.cpp  progress_bar.h  tutorial.cpp
.github/workflows/: tests.yml
config/: config.yaml
cudd-3.0.0/: Makefile
cudd-3.0.0/dddmp/exp/: test6.sh  test7.sh
libs/cudd-3.0.0/: Makefile  RELEASE.NOTES  config.status  libtool
libs/cudd-3.0.0/cudd/: cudd.h
libs/cudd-3.0.0/dddmp/doc/: dddmp-2.0-A4.ps  dddmp-2.0-Letter.ps
libs/cudd-3.0.0/dddmp/exp/: test1.sh  test2.sh  test3.sh  test4.sh  test5.sh
libs/cudd-3.0.0/doc/: cudd.tex.in
libs/cudd-3.0.0/m4/: libtool.m4
libs/cudd-3.0.0/nanotrav/: nanotrav.1
src/: CMakeLists.txt  create_results.py  formulas.cpp  formulas.h  main.cpp  ordering.cpp  ordering.h  progress_bar.h  tutorial.cpp  tutorial.h
src/bdd_formulas/: bdd_formulas.cpp  bdd_formulas.h  bdd_rulesets.cpp  bdd_rulesets.h  formula_ordering.cpp  formula_ordering.h
src/bdd_formulas/static_ordering/: FORCEPlacer.cpp  FORCEPlacer.h  clause_ordering.cpp  clause_ordering.h  formula_ordering.cpp  formula_ordering.h  hypergraph.h  ruleset_ordering.cpp  ruleset_ordering.h  utils.h  variable_ordering.cpp  variable_ordering.h
src/heuristics/force/: FORCEPlacer.cpp
src/ruleset_ordering/: clause_ordering.cpp  clause_ordering.h  ruleset_ordering.cpp  ruleset_ordering.h
src/sdd_formulas/: sdd_formulas.cpp  sdd_formulas.h  sdd_rulesets.cpp  sdd_rulesets.h
src/stats/: BDDBuildStatistic.cpp  BDDBuildStatistic.h  BDDBuildTimeCounter.h  results_output.h
src/utils/: BDDConfiguration.h  configuration.h  file_utils.cpp  file_utils.h  info_structs.h  log_utils.h  minterm_utils.cpp  minterm_utils.h  output_utils.cpp  output_utils.h  progress_bar.cpp  progress_bar.h  results_output.h
src/variable_ordering/: variable_ordering.cpp  variable_ordering.h
tests/: CMakeLists.txt  formula_tests.h  main.cpp  utils.h  utils_tests.h
tests/bdd/: formula_tests.h
tests/sdd/: formula_tests.h
utils/: file_utils.cpp  file_utils.h  output_utils.cpp  output_utils.h
